--- a/index.html
+++ b/index.html
@@ -9,11 +9,20 @@
     <body>
         <button id="boldButton"><strong>B</strong></button>
         <button id="italicButton"><em>I</em></button>
+        <button id="underlineButton"><u>U</u></button>
         <button id="h1Button">H1</button>
         <button id="h2Button">H2</button>
+        <button id="h3Button">H3</button>
+        <button id="h4Button">H4</button>
+        <select id="font-options">
+            <option value="Arial">Arial</option>
+            <option value="Helvetica">Helvetica</option>
+            <option value="Times New Roman">Times New Roman</option>
+            <option value="Georgia">Georgia</option>
+        </select>
     
-        <input type="text" id="urlInput" placeholder="Enter URL">
-        <button id="createLinkButton">Create link</button>
+        <input type="text" id="urlInput" placeholder="Enter URL" style="display: none;">
+        <button id="createLinkButton" style="display: none;">Create link</button>
     
         <div contenteditable="true" id="editor"></div> 
         <script src="index.js"></script>
