styling the main menu and change background color

--- a/mainmenu/index.html
+++ b/mainmenu/index.html
@@ -12,7 +12,7 @@
     <body>
         <div id="background-container">
             <div id="top-nav">
-                <h2 id="top-nav-title">Collaborative Document Editing</h2>
+                <h2 id="top-nav-title"> COLLABORATIVE DOCUMENT EDITING</h2>
                 <div id="user-icon">
                     <span class="material-symbols-outlined">
                         account_circle
@@ -20,7 +20,7 @@
                 </div>
             </div>
             <div id="top-container">
-                <div id="new-document">
+                <div id="new-document" onclick="window.location.href='../texteditor/textEditor.html#nav_container';">
                     <span class="material-symbols-outlined">
                         note_add
                     </span>
