creating new text editor

--- a/mainmenu/index.html
+++ b/mainmenu/index.html
@@ -20,7 +20,7 @@
                 </div>
             </div>
             <div id="top-container">
-                <div id="new-document" onclick="window.location.href='../texteditor/textEditor.html#nav_container';">
+                <div id="new-document" onclick="window.location.href='../texteditor/textEditor.html#editor';">
                     <span class="material-symbols-outlined">
                         note_add
                     </span>
